fix app bar dengan light dark mode

--- a/src/scripts/components/app-bar/AppBar.scss
+++ b/src/scripts/components/app-bar/AppBar.scss
@@ -12,23 +12,84 @@
 
 .header {
   width: 100%;
-  height: 80px;
+  height: 60px;
   display: flex;
   position: fixed;
   padding: 0 5%;
   z-index: 1000;
   align-items: center;
   justify-content: space-between;
-  background-color: white;
+  background-color: var(--color-article-background);
 
   .header__logo {
     min-height: 44px;
     padding-bottom: 4px;
     text-decoration: none;
+    color: var(--color-text);
     font-size: 1.3em;
     font-family: "Pacifico", cursive;
     font-variant-ligatures: no-common-ligatures;
     -webkit-font-variant-ligatures: no-common-ligatures;
+  }
+
+  .switch {
+    display: none;
+    position: relative;
+    margin-left: auto;
+    width: 60px;
+    height: 34px;
+
+    input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    input:checked + .slider {
+      background-color: #2196f3;
+    }
+
+    input:focus + .slider {
+      box-shadow: 0 0 1px #2196f3;
+    }
+
+    input:checked + .slider:before {
+      -webkit-transform: translateX(26px);
+      -ms-transform: translateX(26px);
+      transform: translateX(26px);
+    }
+
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #152028;
+      -webkit-transition: 0.4s;
+      transition: 0.4s;
+    }
+
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 26px;
+      width: 26px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      -webkit-transition: 0.4s;
+      transition: 0.4s;
+    }
+
+    .slider.round {
+      border-radius: 34px;
+    }
+
+    .slider.round:before {
+      border-radius: 50%;
+    }
   }
 
   .hamburger__btn {
@@ -44,7 +105,7 @@
     .hamburger__icon {
       display: block;
       position: relative;
-      background: #333;
+      background: var(--color-text);
       width: 18px;
       height: 2px;
       transition: background 0.2s ease-out;
@@ -55,7 +116,7 @@
       content: "";
       display: block;
       position: absolute;
-      background: #333;
+      background: var(--color-text);
       width: 100%;
       height: 100%;
       transition: all 0.2s ease-out;
@@ -87,13 +148,13 @@
   }
 
   .navigation__drawer {
-    top: 80px;
+    top: 60px;
     right: -300px;
     min-width: 300px;
     min-height: 100vh;
     overflow: hidden;
     position: absolute;
-    background-color: white;
+    background-color: var(--color-article-background);
     transition: all 0.2s ease-out;
     border-style: solid;
     border-color: red;
@@ -109,8 +170,8 @@
         min-height: 44px;
 
         a {
-          padding: 10px 15px;
-          color: black;
+          padding: 10px 10px;
+          color: var(--color-text);
           text-decoration: none;
           position: relative;
 
@@ -128,11 +189,11 @@
         }
 
         a.active {
-          background-color: #f4f4f4;
+          background-color: var(--color-page-background);
         }
 
         a:hover {
-          background-color: #f4f4f4;
+          background-color: var(--color-page-background);
         }
       }
     }
