--- a/src/scripts/components/app-bar/AppBarResponsive.scss
+++ b/src/scripts/components/app-bar/AppBarResponsive.scss
@@ -5,10 +5,24 @@
  * @modify date 2020-08-29 19:14:06
  * @desc [description]
  */
+
+@media screen and (min-width: 360px) {
+    .header {
+        .switch {
+            display: inline-block;
+        }
+    }
+}
+
 @media screen and (min-width: 768px) {
     .header {
         .hamburger__btn {
             display: none;
+        }
+
+        .switch {
+            margin-left: 0;
+            display: inline-block;
         }
 
         .navigation__drawer {
@@ -32,14 +46,6 @@
                     }
                 }
             }
-        }
-    }
-}
-
-@media screen and (min-width: 900px) {
-    .header {
-        .header__menu li a {
-            padding: 10px 20px;
         }
     }
 }
