--- a/src/styles/utilities/variables.scss
+++ b/src/styles/utilities/variables.scss
@@ -1,1 +1,9 @@
-$primary: white;
+// Light Theme Color
+$light-for-text: #000000;
+$light-for-card: #ffffff;
+$light-for-background: #f1f1f1;
+
+// Dark Theme Color
+$dark-for-text: #ffffff;
+$dark-for-card: #232B32;
+$dark-for-background: #152028;
